force-app/main/default/objects/Internal_Attendee__c/Internal_Attendee__c.object-meta.xml
<CustomObject>
    <label>Internal Attendee</label>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>Internal Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>