force-app/main/default/objects/Internal_Attendee__c/fields/Attendee_User__c.field-meta.xml
<CustomField>
    <fullName>Attendee_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>