force-app/main/default/objects/Internal_Attendee__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Internal Attendees</relationshipLabel>
    <relationshipName>Internal_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>